crates/narrative/tests/compile-fail/const-without-value.stderr
error: in a story, all consts must have a value
 --> tests/compile-fail/const-without-value.rs:5:5
  |
5 |     #[step("When using const")]
  |     ^
